--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "atom-material-syntax",
+  "name": "atom-material-syntax-markdown",
   "theme": "syntax",
-  "version": "1.0.7",
-  "description": "A dark syntax theme for Atom that uses Google's Material Design color palette",
+  "version": "1.0.1",
+  "description": "A dark syntax theme for Atom that uses Google's Material Design color palette.",
   "keywords": [
     "syntax",
     "theme",
     "material",
     "material design"
   ],
-  "repository": "https://github.com/silvestreh/atom-material-syntax",
+  "repository": "https://github.com/olemartinruud/atom-material-syntax-markdown",
   "license": "MIT",
   "engines": {
     "atom": ">=1.13.0 <2.0.0"
